fix: resize, submit on enter and dark mode (#83)

--- a/src/features/FormGroup/LinkedDocumentList/style.module.scss
+++ b/src/features/FormGroup/LinkedDocumentList/style.module.scss
@@ -30,7 +30,7 @@
 }
 
 .la-additional-data-item {
-    color: rgba(0, 0, 0, .55);
+    color: $neutral-alpha-60;
     display: inline-block;
     overflow: hidden;
     white-space: nowrap;
